# powermeter-compare

./: .gitignore  Makefile  README.md  powermeter-compare.code-workspace  pyproject.toml
.github/workflows/: ci.yaml
data/: Favero.fit  MyWhoosh.fit  MyWhooshWorkout.json
fit_diff/: power_diff.py
src/fit_diff/: power_diff.py
src/powermeter_compare/: __init__.py  alignment.py  cli.py  fit_io.py  plotting.py  power_comparison.py  workout.py
tests/: test_alignment.py  test_fit_io.py  test_plotting.py  test_ransac.py  test_workout.py
