[tool.poetry]
name = "fit-diff"
version = "0.1.0"
description = "Fit file power difference analysis"
authors = ["Arnaud Mallen <mallen.arnaud@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fit_diff"}]

[tool.poetry.dependencies]
python = "^3.11"
fitparse = "^1.2.0"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
plotly = "^5.14.1"
statsmodels = "^0.13.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
