[project]
name = "fit-diff"
version = "0.1.0"
description = "Fit file power difference analysis"
authors = [{ name = "Arnaud Mallen", email = "mallen.arnaud@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "fitparse>=1.2.0,<2",
    "pandas>=2.0.1,<3",
    "matplotlib>=3.7.1,<4",
    "plotly>=5.14.1,<6",
    "statsmodels>=0.13.5,<0.14",
]

[dependency-groups]
dev = [
    "black>=23.3.0,<24",
    "isort>=5.12.0,<6",
]

[tool.hatch.build.targets.sdist]
include = ["fit_diff"]

[tool.hatch.build.targets.wheel]
include = ["fit_diff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
